<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="25dp"
    tools:context=".MainActivity">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/nev"
            android:id="@+id/nameEditText"
            android:inputType="textPersonName"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/egysegar"
            android:id="@+id/egysegarEditText"
            android:inputType="number"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/mennyiseg"
            android:id="@+id/mennyisegEditText"
            android:inputType="numberDecimal"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/mertekegyseg"
            android:id="@+id/mertekegysegEditText"
            android:inputType="text"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/bruttoAr"
            android:id="@+id/bruttoArEditText"
            android:inputType="numberDecimal"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/addButton"
            android:text="@string/hozzaadas"
            android:textSize="20sp"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/listButton"
            android:text="@string/lista"
            android:textSize="20sp"/>
</LinearLayout>
