<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:padding="25dp"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp"
            android:padding="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">

                <TextView
                    android:id="@+id/nevTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nev"
                    android:textSize="28sp"
                    android:textFontWeight="@integer/material_motion_duration_long_1"
                    android:paddingBottom="8dp"
                    android:gravity="center" />

                <TextView
                    android:id="@+id/egysegArTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/egysegar"
                    android:textSize="24sp"
                    android:paddingBottom="8dp"
                    android:gravity="center" />

                <TextView
                    android:id="@+id/mennyisegTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mennyiseg"
                    android:textSize="24sp"
                    android:paddingBottom="8dp"
                    android:gravity="center" />

                <TextView
                    android:id="@+id/mertekegysegTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mertekegyseg"
                    android:textSize="24sp"
                    android:paddingBottom="8dp"
                    android:gravity="center" />

                <TextView
                    android:id="@+id/bruttoArTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bruttoAr"
                    android:textSize="24sp"
                    android:paddingBottom="8dp"
                    android:gravity="center" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>
</LinearLayout>
